# spook

./: .gitignore  CGtest_result.txt  CITATION.cff  LICENSE  README.md  __init__.py  base.py  lin_solve.py  pyproject.toml  quad_program.py  requirements.txt  setup.cfg  spookQP1d.py  spookbase.py  utils.py  vmi_special.py
.github/workflows/: python-publish.yml
.ipynb_checkpoints/: lin_solve-checkpoint.py
docs/: conf.py  genindex.html  index.rst  objects.inv  py-modindex.html
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  spook.doctree
docs/_build/html/: .buildinfo  index.html  modules.html  search.html  searchindex.js  spook.html
docs/_build/html/_modules/spook/: base.html  contraction_utils.html  lin_solve.html  xval.html
docs/_build/html/_sources/: modules.rst.txt
docs/_modules/: index.html
docs/_modules/spook/: quad_program.html  utils.html
docs/_sources/: spook.rst.txt
spook/: __init__.py  base.py  contraction_utils.py  lin_solve.py  quad_program.py  utils.py  vmi_special.py  xval.py
spook/unittest/: crossvalid.ipynb  lassoAuxMemoTest.py  precontract.ipynb  spsEncode.ipynb  test1Dsps.py  testL1L2.ipynb  testLcurve.ipynb  testPosL1.py  testPreNorm.py  test_resid_reg_eval.py  test_xval.py  true_AGtAGcache.out
spook_SLAC.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
unittest/: no_AGtAGcache.out  profile_memo.py  testL1L2.ipynb  testL2resid.ipynb  testL2resid.py  testLcurve.ipynb  testPosL1.py  testPosL1L2.ipynb  testPreNorm.py  test_dict_innerprod.py
