[metadata]
name = FDGI
version = 0.9
author = Jun Wang
author_email = junwang9@stanford.edu
description = A package for frequency-domain ghost imaging
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/congzlwag/spook
project_urls =
    Bug Tracker = https://github.com/congzlwag/spook/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.7

[options.packages.find]
where = .
