[metadata]
name = FDGI
version = attr: spook.__version__
author = Jun Wang
author_email = junwang9@stanford.edu
description = A package for spectral-domain ghost imaging
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/congzlwag/spook
project_urls =
    Bug Tracker = https://github.com/congzlwag/spook/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.7
install_requires = 
    numpy >=1.19
    scipy >=1.7
    osqp >=0.6.2
[options.packages.find]
where = .
